# cpplog

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt  logger_bech.cpp
cmake/: CodeCoverage.cmake  Sanitize.cmake
example/: CMakeLists.txt  main.cpp
example/desktop/: CMakeLists.txt  main.cpp
include/: console_sink.h  console_sync.h  default_provider.h  desktop_provider.h  logger.h  logger_config.h  message.h  stream_logger.h
src/: logger.cpp
tests/: CMakeLists.txt  test.cpp
